<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/about_screen_title1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="@string/about_screen_content1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#ffffff"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/about_screen_title2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="@string/about_screen_content2"/>

</LinearLayout>