<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/ic_filter_list_white_24dp"
            android:layout_marginStart="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:text="@string/filters"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/filter_all"
            android:text="@string/filter_all"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"/>

        <TextView android:id="@+id/filter_pc"
            android:text="@string/filter_pc"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"/>

        <TextView android:id="@+id/filter_ps4"
            android:text="@string/filter_ps4"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"/>

        <TextView android:id="@+id/filter_xbox"
            android:text="@string/filter_xbox"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"/>

        <TextView android:id="@+id/filter_wii"
            android:text="@string/filter_wii"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>